--- a/app/views/user/_xtmpl_list_by_cosmap.html.erb
+++ b/app/views/user/_xtmpl_list_by_cosmap.html.erb
@@ -49,7 +49,7 @@
 						{% if(cfs.length>1){ %} 
 						<button class="btn btn-sm btn-default" onclick="$(this).next().toggleClass('hidden');">選擇學程</button>
 						<div class="hidden" style="width:250px;display:inline-block;">
-							<select id="{%=course.cs_id%}" class="form-control" onchange="select_cf({%=course.sem_name=="抵免"%},{%=o.user_id%},$(this));">
+							<select id="{%=course.id%}" class="form-control" onchange="select_cf({%=course.sem_name=="抵免"%},{%=o.user_id%},$(this));">
 							{% for(var j = 0,cf ;cf=cfs[j];j++){ %}
 								<option value="{%=cf.id%}" {%= cf.id==course.cf_id ? "selected":""%}>{%=cf.name%}</option>
 							{% } %}
