user stat table js ver1

--- a/app/views/user/import_course_2.html.erb
+++ b/app/views/user/import_course_2.html.erb
@@ -1,4 +1,5 @@
-﻿<%= javascript_include_tag "user/coursemap-checker", "data-turbolinks-track" => true %>
+﻿<%= javascript_include_tag "user_course_stat/checker", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "user_course_stat/cm_check-helper", "data-turbolinks-track" => true %>
 <div class="container panel ">
 	<div class=" bs-callout bs-callout-info well">
 		<h2><%=fa_icon "upload"%>選擇學程</h2>
