--- a/app/views/user/statistics_table.html.erb
+++ b/app/views/user/statistics_table.html.erb
@@ -1,337 +1,25 @@
 <style>
-.grid-default { width: 104px ; height: 50px ;}
-.text-family{ font-family: Geneva, Arial, Helvetica, san-serif,微軟正黑體; font-size: 14px;}
-.text-center {
-	text-align: center;
+table.fixed { table-layout:fixed; }
+table.fixed td { overflow: hidden; }
+table td { 
+  text-align: center; 
+  font-family: Geneva, Arial, Helvetica, san-serif, 微軟正黑體; font-size: 14px;  
 }
+
 </style>
 <html>
 <head>
-	<title class='title'>NCTU+</title>
+	<title id='title'>NCTU+</title>
 
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-	<%= javascript_include_tag "tmpl.min", "data-turbolinks-track" => true %>
-	<%= javascript_include_tag "coursemap-checker", "data-turbolinks-track" => true %>
+	<%= javascript_include_tag "courses/statistics_table", "data-turbolinks-track" => true %>
 	<%= stylesheet_link_tag asset_path("application.css") %>
 </head>
-<div id="table">Loading...</div>
-<hr>
+<table class='table table-bordered text-family fixed' id="ctable"></table>
+
 </html>
-<script type="text/x-tmpl" id="table-content">
-{% var result = parseCouseMap(o.course_map, o.user_courses);/*parse_course(o.course_map, o.user_courses);*/%}
-
-{% var data = result.data;%}
-
-<table class='table table-bordered text-family '>
-	<tr>
-		<td colspan="14" bgcolor="#A9F5BC"><p class="text-center">ㄧ. 本系所專業科目</p></td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-		<td><p class="text-center">科目名稱</p></td>
-		<td>1上</td>
-		<td>1下</td>
-		<td>2上</td>
-		<td>2下</td>
-		<td>3上</td>
-		<td>3下</td>
-		<td>4上</td>
-		<td>4下</td>
-		<td>應修</td>
-		<td>實得</td>
-		<td><p class="text-center">備註</p></td>
-	</tr>
-{% for(var i=0, cf; cf=data[i]; ++i){ %}
-	{% if(cf.cf_type<3){ %}
-		{% for(var j=0, course; course=cf.cf_courses[j]; ++j){ %}
-	<tr>
-			{% if(j==0){ %}
-			<td width="30px" rowspan="{%= cf.rowspan %}" colspan="2" >{%= cf.cf_name %}</td>
-			{% } %}	
-			<td>{%= course.name %}</td>
-			{% for(var k=0; k<8; ++k){ %}
-			<td>
-				{% for(var m=0, c; c=course.cs[m]; m++){ %}
-					{%=((c.sem==k) ? c.score : '' ) %}
-				{% } %}	
-			</td>
-			{% } %}
-			<td>{%=course.credit%}</td>
-			<td>{%=((course.pass) ? course.credit : 0 )%}</td>
-			<td>{%=course.note%}</td>
-	</tr>
-		{% } %}
-	{% }else{ %}
-		{% for(var jj=0, sub_cf; sub_cf=cf.sub_cf[jj]; jj++){ %}
-
-		{% for(var j=0, course; course=sub_cf.cf_courses[j]; ++j){ %}
-	<tr>	
-			{% if(jj==0 && j==0){ %}
-				<td width="15px" rowspan="{%= cf.rowspan %}">{%=cf.cf_name%}</td>
-			{% } %}
-			{% if(j==0){ %}
-				<td width="15px" rowspan="{%= sub_cf.rowspan %}">{%= sub_cf.cf_name %}</td>
-			{% } %}		
-			<td>{%= course.name %}</td>
-			{% for(var k=0; k<8; ++k){ %}
-			<td>
-				{% for(var m=0, c; c=course.cs[m]; m++){ %}
-					{%=((c.sem==k) ? c.score : '' ) %}
-				{% } %}	
-			</td>
-			{% } %}
-			<td>{%=course.credit%}</td>
-			<td>{%=((course.pass) ? course.credit : 0 )%}</td>
-			<td>{%=course.note%}</td>
-	</tr>
-		{% } %}
-		
-		{% } %}
-	{% } %}
-{% } %}
-
-{% o.user_courses = getRemains(o.user_courses, result.match); %}
-{% var remains = o.user_courses.filter(function(e){ return e.degree!=0 ;}); %}
-
-
-{% if(remains.length > 0 ){ %}
-{% remains = remains.sort(function(a, b){ return ((a.degree < b.degree) ? -1 : ((a.degree > b.degree) ? 1 : 0));});%}
-	<tr>
-		<td colspan="14" bgcolor="#FAAC58"><p class="text-center">二. 其他選修科目(外系所選修)</p></td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-		<td><p class="text-center">科目名稱</p></td>
-		<td>1上</td>
-		<td>1下</td>
-		<td>2上</td>
-		<td>2下</td>
-		<td>3上</td>
-		<td>3下</td>
-		<td>4上</td>
-		<td>4下</td>
-		<td>應修</td>
-		<td>實得</td>
-		<td><p class="text-center">備註</p></td>
-	</tr>
-	{% for(var i=0, r; r=remains[i]; ++i){ %}
-		{% var course_info = checkCourse(r)[0] ; %}
-		<tr>
-			<td colspan='2'></td>
-			<td>{%=r.name%}</td>
-		{% for(var j=0; j<8 ;++j){ %}	
-			{% if(course_info.sem>=0 && j==course_info.sem){ %}
-				<td>{%=course_info.score%}</td>
-			{% }else{ %}	
-				<td></td>
-			{% } %}
-		{% } %}
-		<td>{%=r.credit%}</td>
-		<td>{%=((course_info.pass) ? r.credit : 0 )%}</td>
-		<td>{%=r.memo%}</td>
-		</tr>
-	{% } %}
-{% } %}	
-
-{% var others = o.user_courses.filter(function(e){ return e.degree==0 ;}); %}
-{% others = others.sort(function(a, b){ return ((a.cos_type < b.cos_type) ? -1 : ((a.cos_type > b.cos_type) ? 1 : 0));});%}
-
-{% if(others.length > 0 ){ %}
-	<tr>
-		<td colspan="14" bgcolor="#F4FA58"><p class="text-center">三. 校訂共同科目</p></td>
-	</tr>
-	<tr>
-		<td colspan="2"></td>
-		<td><p class="text-center">科目名稱</p></td>
-		<td>1上</td>
-		<td>1下</td>
-		<td>2上</td>
-		<td>2下</td>
-		<td>3上</td>
-		<td>3下</td>
-		<td>4上</td>
-		<td>4下</td>
-		<td>應修</td>
-		<td>實得</td>
-		<td><p class="text-center">備註</p></td>
-	</tr>
-	{% for(var i=0, r; r=others[i]; ++i){ %}
-		{% var course_info = checkCourse(r)[0] ; %}
-		<tr>
-			<td colspan='2'></td>
-			<td>{%=r.name%}</td>
-		{% for(var j=0; j<8 ;++j){ %}	
-			{% if(course_info.sem>=0 && j==course_info.sem){ %}
-				<td>{%=course_info.score%}</td>
-			{% }else{ %}	
-				<td></td>	
-			{% } %}
-		{% } %}
-		<td>{%=r.credit%}</td>
-		<td>{%=((course_info.pass) ? r.credit : 0 )%}</td>
-		<td>{%=r.memo%}</td>
-		</tr>
-	{% } %}
-{% } %}
-</table>
-
-</script>
 
 <script>
-
-var user_info = null ;
-
-function getRemains(user_courses, matchs){
-	var re = user_courses.filter(function(e1){
-		return ($.grep(matchs, function(e2){return e2==e1.uni_id ;})==0);
-	});
-	
-	return re ;
-}
-
-function parseSemseterStr(sem_str){
-  var res = [] ;
-  return res ;
-}
-
-// determine where to place 
-function checkCourse(user_course){ 
-	var pass = check_pass(user_course.pass_score, user_course.score) ;	
-	//console.log(user_course.name+ " "+pass);
-	var note = '', show_place=0 ;  
-	//console.log(user_course.name);
-	if(user_course.sem.year==user_info.year_now && user_course.sem.half==user_info.half_now)
-		user_course.score = '修習中';
-	if(user_course.sem.year==0){// 大學部或轉學帶課
-		//console.log('[take] '+user_course.memo);
-		note += user_course.memo ;
-		show_place = -1  ;
-	}else if(user_course.sem.half==3){ // 暑修
-		note += user_course.sem.year+'年暑修 ';
-		show_place = -1 ; // 暑修或抵免的課不屬於大一到大四
-	}else{  // normal case
-		var dy = user_course.sem.year - user_info.year ;
-		var dh = user_course.sem.half - 1 ;
-		show_place = dy*2+dh ;	//顯示成績的位置(大一上, 大一下...)
-	}	
-	//console.log(user_course.score);
-	return [{ score: user_course.score, sem: show_place, pass:pass }, note];
-}
-
-//input course_field and the course belongs to it. map course to cf's course(course, course group )
-function generateCourseData(cf, courses, record, dataTo){
-	cf.courses.forEach(function(cf_course){
-		var course_info= {name : cf_course.name, cs:[], credit: cf_course.credit, note:'', pass:false} ;
-		var search = $.grep(courses,  function(e){ return e.id == cf_course.id; }) ;
-		if(search.length>0)
-		{
-			search.forEach(function(user_course) {	
-				var res = checkCourse(user_course);				
-				course_info['note'] += res[1] ;	// append note 
-				course_info['pass'] |= res[0].pass ;
-				course_info.cs.push(res[0]) ; 		
-			});
-		}
-		if(record || search.length>0)
-			dataTo.push(course_info);
-	});
-	cf.course_groups.forEach(function(cg){
-		var course_info= {name : cg.lead_course.name, cs:[], credit: cg.credit, note:'', pass: false} ;
-		var match = false;
-		cg.courses.forEach(function(cg_course){
-			var search = $.grep(courses,  function(e){ return e.id == cg_course.id; }) ;
-			if(search.length>0)
-			{
-				match = true ;
-				search.forEach(function(user_course){
-					var res = checkCourse(user_course);			
-					if(cg.lead_course_id != user_course.id)		//若不是leader就顯示note
-						course_info['note'] += '['+user_course.name+'] ';
-					course_info['note'] += res[1];	
-					course_info['pass'] |= res[0].pass ;
-					course_info.cs.push(res[0]) ;
-
-				});	
-			}
-		});
-		if(record || match)
-			dataTo.push(course_info);
-	});
-	
-	return ;
-}
-
-function recordMatch(ary, matchs){
-	matchs.forEach(function(c){
-		ary.push(c.uni_id);	
-	});
-	return ;
-}
-
-function parseCouseMap(course_map, user_courses)
-{
-	match_ary = [] ;
-	course_map_to_print = [] ;
-	for(var i=0, cf; cf = course_map[i];++i)
-	{
-		var cf_data = {cf_name: cf.cf_name, cf_courses:[], sub_cf:[], cf_type: cf.cf_type, rowspan:0} ;
-		switch(cf.cf_type)
-		{
-			case 1://必修
-			case 2://x選y
-				var match_courses = user_courses.filter(function(x) { return (x.cf_id==cf.id); });
-				if(match_courses.length>0)
-				{
-					recordMatch(match_ary, match_courses);
-					generateCourseData(cf, match_courses, (cf.cf_type==1), cf_data.cf_courses);
-					cf_data['rowspan'] = cf_data.cf_courses.length ;
-				}
-				break;
-			case 3:
-				for(var j=0, sub_cf; sub_cf=cf.child_cf[j]; j++)
-				{
-					var sub_data = {cf_name: sub_cf.cf_name, sub_cf:[], cf_courses:[], cf_type: sub_cf.cf_type, rowspan:0} ;
-					for(var k=0, bottom; bottom=sub_cf.child_cf[k];++k)
-					{
-						var match_courses = user_courses.filter(function(x) { return (x.cf_id==bottom.id); });
-						if(match_courses.length>0)
-						{
-							recordMatch(match_ary, match_courses);
-							generateCourseData(bottom, match_courses, (bottom.cf_type==1), sub_data.cf_courses) ;
-							sub_data['rowspan'] += sub_data.cf_courses.length ;
-						}
-					}
-					cf_data['rowspan'] += sub_data['rowspan'] ;
-					if(sub_data['rowspan'] > 0)
-						cf_data.sub_cf.push(sub_data);	
-				}
-				
-				break;
-			case 4:
-				for(var j=0, bottom; bottom=cf.child_cf[j]; j++)
-				{
-					var sub_data = {cf_name: bottom.cf_name, sub_cf:[], cf_courses:[], cf_type: bottom.cf_type, rowspan:0} ;
-					var match_courses = user_courses.filter(function(x) { return (x.cf_id==bottom.id); });
-					if(match_courses.length>0)
-					{	
-						recordMatch(match_ary, match_courses);
-						generateCourseData(bottom, match_courses, (bottom.cf_type==1), sub_data.cf_courses) ;
-						sub_data['rowspan'] = sub_data.cf_courses.length;
-						cf_data['rowspan'] += sub_data.rowspan ;
-						cf_data.sub_cf.push(sub_data);								
-					}
-				}			
-				break;
-			default:
-				break ;
-		}//switch
-		course_map_to_print.push(cf_data);
-		
-	}//for
-	console.log(course_map_to_print);
-	return {data:course_map_to_print, match: match_ary};
-}
-
 $(document).ready(function(){
 <% if params[:user_id].presence %>
 	$.getJSON( "/user/statistics_table?user_id=<%=j params[:user_id]%>",
@@ -339,30 +27,16 @@ $(document).ready(function(){
 	$.getJSON( "/user/statistics_table",
 <% end %>
 	function(res){
-		console.log(res);
-		var aaa = "上夏";
-		if(!parseInt(aaa))
-		  console.log(parseInt(aaa));
-		return ;
-		if(!res.course_map){
-			alert("沒有對應的學程");
-			$('#table').html('請確認你的系別系級，或通知管理員建立一個新的學程地圖');
-			return false ;
-		}	
-		if(res.user_info.student_id){
-			user_info = res.user_info ;
-			$('.title').html(res.user_info.student_id+" "+res.user_info.map_name);
-			$("#table").html(tmpl("table-content", res));	
-			//parseCouseMap(res.course_map, res.user_courses);
-		}else{
-			alert('沒有學號資料');
-			$('#table').html('請匯入成績');
-			return false ;
+	 // console.log(res);
+		if( !res.user_courses || res.user_courses.length==0 || !res.course_map || !res.user_info ){
+		  alert('No data');
+		  return false; 
 		}
-	});
+		$('#title').html(res.user_info.student_id+" "+res.user_info.year+"年入學");
+		$('#ctable').StatisticsTable(res);
+
+	});//getjson
 
 });
-
-
 
 </script>
