--- a/app/views/course_maps/public/_xtmpl_course_table.html.erb
+++ b/app/views/course_maps/public/_xtmpl_course_table.html.erb
@@ -1,8 +1,7 @@
 <script type="text/x-tmpl" id="cm_public">
-	<h3 id="title">
-		
+	<h3 id="title">		
 		{%= o.dept_name %} 入學年度:
-		<div class="btn-group" style="margin-top:-2px;">
+		<div id="year-selector" class="btn-group" style="margin-top:-2px;">
 			<a id="year-100" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=100">100</a>
 			<a id="year-101" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=101">101</a>
 			<a id="year-102" class="btn btn-info" href="?dept_id={%=o.dept_id%}&year=102">102</a>
@@ -17,15 +16,7 @@
 		&nbsp;&nbsp;畢業學分:<strong>{%=cm.total_credit%}</strong>
 		</h3>
 		<hr>
-		<section id="memo">
 		
-		<h3><strong>備註</strong></h3>
-		<h4>
-		{% if(cm.desc!="") %}
-		{% print(cm.desc.replace(/(?:\r\n|\r|\n)/g, '<br />'),true); %}
-		</h4>
-		</section>
-		<hr>
 		<section id="rules">
 		<h3><strong>修課規定</strong></h3>
 		{% for(var i=0,cf;cf=cm.cfs[i];i++){ %}		
@@ -116,6 +107,15 @@
 				{% } %}				
 				</table>
 			</section>
+			<hr>
+			<section id="memo">	
+				<h3><strong>備註</strong></h3>
+				<h4>
+					{% if(cm.desc!="") %}
+					{% print(cm.desc.replace(/(?:\r\n|\r|\n)/g, '<br />'),true); %}
+				</h4>
+			</section>
+			
 		</div>
 	{% } %}	
 </script>
