--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,11 @@
 <script>
 	$(document).ready(function() {
 		<% if flash[:notice] %>
-			toastr.warning("<%= flash[:notice][:message] %>");
+		  <% if flash[:notice].kind_of? String%>
+		    toastr.warning("<%= flash[:notice] %>");
+		  <% else %>
+			  toastr.warning("<%= flash[:notice][:message] %>");
+		  <% end %>
 		<% end %>		
 	});
 <% if Rails.env.production? %>
