fix admin/user bug

--- a/app/views/admin/_manage_user_lists.html.erb
+++ b/app/views/admin/_manage_user_lists.html.erb
@@ -1,10 +1,10 @@
 <tr class="row">
 	<td>
-		<% if user.uid%>
-			<%= image_tag "http://graph.facebook.com/"<<user.uid<<"/picture", size: "25x25" %>
-			<%= link_to user.name, "http://www.facebook.com/"<<user.uid, target:"_blank" %>
+		<% if user.auth_facebook%>
+			<%= image_tag "http://graph.facebook.com/"<<user.auth_facebook.uid<<"/picture", size: "25x25" %>
+			<%= link_to user.name, "http://www.facebook.com/"<<user.auth_facebook.uid, target:"_blank" %>
 		<% else %>
-			<%=user.student_id	%>
+			<%=user.student_id||"error"	%>
 		<% end%>	
 	</td>
 	<% if !user.department.nil? %>
