--- a/app/views/user/statistics.html.erb
+++ b/app/views/user/statistics.html.erb
@@ -2,11 +2,13 @@
 <%= javascript_include_tag "user_course_stat/cm_check-helper", "data-turbolinks-track" => true %>
 <div class="panel panel-primary" >
 	<div class="panel-heading" >
-		<h4 class="text-center">畢業學分計算</h4>
+		<h4 class="text-center">
+			畢業學分計算			
+		</h4>
 	</div>
 	</br>
-	<div id="common_check_div" class="container">
-	</div>
+	
+	<div id="common_check_div" class="container"></div>
 	<div id="cosmap_check_div" class="container"></div>
 	<div id="course_list" class=""><div class="text-center"><%=fa_icon "refresh spin 2x"%></div></div>
 </div>
