--- a/app/views/user/_xtmpl_list_by_costype.html.erb
+++ b/app/views/user/_xtmpl_list_by_costype.html.erb
@@ -15,20 +15,25 @@
 
 		{% for (var j=0, course; course=courses[j]; j++) { %}
 			{% var pass_class=""; %}
-			{% if(course.sem_id==o.last_sem_id||check_pass(o.pass_score,course.score)) { %}
+			{% if(checkPassTaking(o.pass_score,course.score)) { %}
 				{% local_credit+=parseInt(course.credit); %}
 			{% } %}
 			<tr class="row {%=pass_class%}">
 				<td class="col-md-6">
 					<h4 class="text-center">
-						{% if(course.sem_id!=o.last_sem_id&&!check_pass(o.pass_score,course.score)) { %}
-								<%=image_tag asset_path("failed.png"),size:"70x30"%>
+						{% if(!checkPassTaking(o.pass_score,course.score)) { %}
+							{% if(course.score=="") %}
+								[<font color="red">缺(請重新匯入)</font>]
+							{% else if (course.score=="W")%}
+								(<font color="gray">退</font>)
+							{% else %}
+								<%=image_tag asset_path("failed.png"),size:"70x30"%>							
 						{% } %}
 						<a href="/courses/{%=course.cd_id%}" target="blank">{%=course.name%}</a> | 
-						{%=course.t_name%} | 
-						{% if(course.cf_name!=""){ %}
-						{%=course.cf_name%} | 
-						{% } %}
+							{%=course.t_name%} | 
+							{% if(course.cf_name!=""){ %}
+								{%=course.cf_name%} | 
+							{% } %}
 						<%= fa_icon "graduation-cap", class:"credit-count" %> <strong>{%=course.credit==0 ? "0" : course.credit%}</strong>
 					</h4>
 				</td>
