--- a/app/views/course_maps/index.html.erb
+++ b/app/views/course_maps/index.html.erb
@@ -15,7 +15,9 @@
 			</div>
 			<h3><strong>Q&A</strong></h3>
 			<hr>
-			<div id="QandA" style="display: none;">
+			<div id="QandA">
+            <div id="fb-root"></div>
+                
 			</div>
 		</div>
 	</div>
@@ -56,6 +58,13 @@
 	
 </div>
 <script>
+    (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.3&appId=<%=Facebook::APP_ID%>";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
 	function show_tip(){
 		$('#joyRideTipContent').joyride("destroy");
 		$('#joyRideTipContent').joyride({
@@ -109,6 +118,8 @@
 		
 		var dept_id=<%=params[:dept_id]||0%>;
 		var year=<%=params[:year]||0%>;
+        $('#fb-root').html('<div class="fb-comments" data-href="" data-numposts="5" width="100%" data-colorscheme="light"></div>');
+        $('.fb-comments').attr('data-href',"<%=request.original_url%>");
 		if(dept_id!=0){
 			$("#dept-"+dept_id).parent().parent().prev().click();		
 			$("#dept-"+dept_id).addClass("selected");
