--- a/app/views/course_maps/public/_dept_sidebar.html.erb
+++ b/app/views/course_maps/public/_dept_sidebar.html.erb
@@ -20,7 +20,7 @@
 						
 						<% college.departments.each do |dept| %>
 							<li id="dept-<%=dept.id%>" style="padding-left :20px;">
-								<a href="?dept_id=<%="#{dept.id}&year=#{Semester::CURRENT.year}"%>"><%=dept.ch_name%></a>
+								<a href="?dept_id=<%="#{dept.id}&year=#{Semester::CURRENT.year}"%>" data-no-turbolink><%=dept.ch_name%></a>
 							</li>
 						<% end %>
 					</ul>
