fb comment test moderate

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta property="fb:app_id" content="<%=Facebook::APP_ID%>" />
+	
 <!--<link rel="shortcut icon" href="/favicon.ico" />-->
   <title>NCTU+</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
@@ -12,6 +14,7 @@
 		<meta name="robots" content="noindex">
 	<% end %>
 	<meta name="description" content="NCTU+ 交大智慧選課系統">
+	
 </head>
 
 <body>
