--- a/app/views/course_maps/index.html.erb
+++ b/app/views/course_maps/index.html.erb
@@ -115,7 +115,7 @@
 	}
 	$(document).ready(function(){		
 		var dept_id=<%=params[:dept_id]||0%>;
-		var year=<%=params[:year]||0%>;
+		var year=<%=params[:year]||params["amp;year"]||0%>;
 		$('#fb-root').html('<div class="fb-comments" data-href="" data-numposts="5" width="100%" data-colorscheme="light"></div>');
 		$('.fb-comments').attr('data-href',"<%= request.original_url.html_safe%>");
 		if(dept_id!=0){
