--- a/app/views/course_maps/index.html.erb
+++ b/app/views/course_maps/index.html.erb
@@ -116,8 +116,9 @@
 	$(document).ready(function(){		
 		var dept_id=<%=params[:dept_id]||0%>;
 		var year=<%=params[:year]||params["amp;year"]||0%>;
+		
 		$('#fb-root').html('<div class="fb-comments" data-href="" data-numposts="5" width="100%" data-colorscheme="light"></div>');
-		$('.fb-comments').attr('data-href',"<%= request.original_url.html_safe%>");
+		$('.fb-comments').attr('data-href',"<%="#{request.base_url}/course_maps/?dept_id="%>"+dept_id+'&year='+year);
 		if(dept_id!=0){
 			$("#dept-"+dept_id).parent().parent().prev().click();		
 			$("#dept-"+dept_id).addClass("selected");
